[gd_scene load_steps=10 format=3 uid="uid://b461j4ney5bsb"]

[ext_resource type="Script" uid="uid://b73s70xssf4a6" path="res://Script/UIElements/char_profile.gd" id="1_44v3o"]
[ext_resource type="Texture2D" uid="uid://bls8cn6je3t52" path="res://Assets/Textures/Sprites_battle/Icons/Othenson.png" id="1_deygv"]
[ext_resource type="Shader" uid="uid://bxaygjvv1hcr1" path="res://Resources/Shaders/char_profile_border.gdshader" id="2_alxar"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hovjx"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 3
border_color = Color(1, 1, 1, 0.52549)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5yglc"]
resource_local_to_scene = true
shader = ExtResource("2_alxar")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0
shader_parameter/FlashOn = false
shader_parameter/FlashAmnt = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_8kfvr"]
font_size = 18

[sub_resource type="Animation" id="Animation_g0p1d"]
resource_name = "flash"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StatsPicture/TextureRect:material:shader_parameter/FlashAmnt")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25),
"transitions": PackedFloat32Array(1, 1, 1.46409),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_ptu7r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StatsPicture/TextureRect:material:shader_parameter/FlashAmnt")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ptu7r"]
_data = {
&"RESET": SubResource("Animation_ptu7r"),
&"flash": SubResource("Animation_g0p1d")
}

[node name="CharProfile" type="Control"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 3
anchor_right = 0.208
anchor_bottom = 0.139
offset_right = 0.319992
offset_bottom = -0.0800095
script = ExtResource("1_44v3o")

[node name="DeadOverlay" type="ColorRect" parent="."]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513726, 0, 0.0352941, 0.572549)

[node name="CurSelected" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.49, 0.49, 0.49, 0.403922)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hovjx")

[node name="StatsPicture" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="StatsPicture"]
material = SubResource("ShaderMaterial_5yglc")
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("1_deygv")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="StatsPicture"]
layout_mode = 2

[node name="Name" type="Label" parent="StatsPicture/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Othenson"
label_settings = SubResource("LabelSettings_8kfvr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="StatsPicture/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="StatsPicture/VBoxContainer"]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ptu7r")
}
